--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>TESTE</h1>
+  <main>
+    <div class="passo">
+      <img src="./arvores_cidades.jpg" alt="">
+      <p></p>
+      <button></button>
+      <button></button>
+    </div>
+  </main>
+   
 </body>
 </html>
